--- a/ex02-js/jqajax.html
+++ b/ex02-js/jqajax.html
@@ -26,7 +26,7 @@
 </body>
 <script>
     $(document).ready(event => {
-        // #btnCallSnippet에 click 이벤트 핸드러 부착
+        // #btnCallSnippet에 click 이벤트 핸들러러 부착
         $("#btnCallSnippet").on("click", event => {
             alert("코드 조각을 불러옵니다.");
 
@@ -51,12 +51,8 @@
                     console.error("ERROR:", error);
                     console.error("REQUEST:", request);
                 }
-
-
             });
         })
-
     });
 </script>
-
 </html>
