--- a/ex02-js/jqajax.html
+++ b/ex02-js/jqajax.html
@@ -9,6 +9,7 @@
     <script src="./scripts/jquery/jquery.dev.js"></script>
 </head>
 
+
 <body>
     <button id="btnCallSnippet">HTML 조각 불러오기</button>
     <button id="btnCallMovies">영화 목록 불러오기</button>
@@ -24,24 +25,25 @@
     </table>
 
 </body>
+
 <script>
     $(document).ready(event => {
-        // #btnCallSnippet에 click 이벤트 핸들러러 부착
+        // #btnCallSnippet에 click 이벤트 핸들러 부착
         $("#btnCallSnippet").on("click", event => {
             alert("코드 조각을 불러옵니다.");
 
             // ajax로 코드 조각 불러오기
             $.ajax({
-                url: "snippet.html",            // URL
-                type: "GET",                    // 요청방식
-                // data:                           // 전송할 데이터
-                dataType: "text",               // 응답으로 받을 데이터의 형식
+                url: "snippet.html",                        // URL
+                type: "GET",                                // 요청방식
+                // data:                                    // 전송할 데이터 (현재는 없음음)
+                dataType: "text",                           // 응답으로 받을 데이터의 형식
                 success: function (response) {
                     // 요청 성공했을 때의 콜백
                     // response : 서버가 보내준 데이터
                     console.log(response);
                     // #info에 콘텐츠로 추가
-                    $("#info").html(response);
+                    $("#info").html(response);              // 서버에서 받아온 데이터(response)를 #info 안에 삽입
                 },
                 error: function (request, status, error) {
                     // request: 요청 정보
