--- a/ex03-rest-api/todos.html
+++ b/ex03-rest-api/todos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TODO App</title>
-    <link rel="stylesheet" href="./css/todos.css" />
+    <link rel="stylesheet" href="./css/todos.css" />                        <!-- CSS 연결 -->
 </head>
 
 
@@ -16,9 +16,10 @@
         <input type="text" id="new-todo" placeholder="New TODO">
         <button id="add-todo">Add</button>
     </div>
+
     <ul id="todo-list"></ul>
 
-    <script src="./js/app.js"></script>
+    <script src="./js/app.js"></script>                                     <!-- JS 연결 -->
 </body>
 
 </html>
