--- a/cstorage/03-local-and-session-storage.html
+++ b/cstorage/03-local-and-session-storage.html
@@ -24,9 +24,11 @@
     <h2>LocalStorage - User Settings</h2>
     <label for="theme">Theme:</label>
     <input type="text" id="theme" placeholder="e.g., dark">
+
     <label for="fontSize">Font Size:</label>
     <input type="text" id="fontSize" placeholder="e.g., medium">
     <br />
+
     <button id="saveLocalStorage">Save Settings</button>
     <button id="readLocalStorage">Read Settings</button>
     <button id="deleteLocalStorage">Delete Settings</button>
@@ -35,9 +37,11 @@
     <h2>SessionStorage - User Information</h2>
     <label for="username">Username:</label>
     <input type="text" id="username" placeholder="e.g., Alice">
+
     <label for="email">Email:</label>
     <input type="text" id="email" placeholder="e.g., alice@example.com">
     <br />
+
     <button id="saveSessionStorage">Save User Info</button>
     <button id="readSessionStorage">Read User Info</button>
     <button id="deleteSessionStorage">Delete User Info</button>
@@ -45,6 +49,52 @@
 
     <script>
         // LocalStorage Handlers - User Settings
+
+        // #saveLocalStorage click 이벤트
+        document.getElementById("saveLocalStorage")
+            .addEventListener("click", event => {
+                // #theme, #fontSize를 가져와서 LocalStorage에 저장
+                const theme = document.getElementById("theme").value;
+                const fontSize = document.getElementById("fontSize").value;
+
+                if (theme && fontSize) {
+                    // 다 입력되어 있으면 저장
+                    localStorage.setItem("theme", theme);               // theme(왼쪽)이라는 key에 theme value(오른쪽)를 저장
+                    localStorage.setItem("fontSize", fontSize);         // fontSize(왼쪽)이라는 key에 fontSize value(오른쪽)를 저장
+
+                    // #localStorageResult에 저장 결과 출력
+                    document.getElementById("localStorageResult")
+                        .innerText = `저장되었습니다: theme: ${theme}, fontSize: ${fontSize}`
+                } else {
+                    // 경고
+                    alert("테마와 폰트 크기 모두 입력해 주세요.");
+                }
+            });
+
+        document.getElementById("readLocalStorage")
+            .addEventListener("click", event => {
+                // theme, fontSize를 LocalStorage로 부터 읽어와서
+                // #localStorageResult에 콘텐츠 추가
+                const theme = localStorage.getItem("theme");
+                const fontSize = localStorage.getItem("fontSize");
+
+                if (theme && fontSize) {
+                    // 데이터 읽어오기
+                    document.getElementById("localStorageResult")
+                        .innerText = `READ: theme: ${theme}, fontSize: ${fontSize}`;
+                } else {
+                    document.getElementById("localStorageResult")
+                        .innerText = "설정 값이 없습니다.";
+                }
+            });
+
+        document.getElementById("deleteLocalStorage")
+            .addEventListener("click", event => {
+                localStorage.removeItem("theme");
+                localStorage.removeItem("fontSize");
+                document.getElementById("localStorageResult")
+                    .innerText = "설정이 삭제되었습니다."
+            });
 
 
         // SessionStorage Handlers - User Information
